--- a/transactions/templates/loan_request.html
+++ b/transactions/templates/loan_request.html
@@ -4,7 +4,7 @@
 {% block title %}Loan Request{% endblock %}
 
 {% block content %}
-<div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md">
+<div class="max-w-lg mx-auto bg-white p-6 rounded-lg shadow-md mt-10 mb-40">
     <h2 class="text-2xl font-semibold mb-6 text-center">Request a Loan</h2>
     
     <form method="post" class="space-y-6">
