--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Mamar Bank{% endblock title %}</title>
+    <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-ZJ7YoS9sVZy4E8FV0LRi2AqKn3+PgMIP2+5zW0Ix4XtkTrx0OYkGnSRsZ3DInKjGV9AT5JkNf4ZypHRzCVXzdA=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-50 min-h-screen flex flex-col font-sans">
