--- a/core/templates/messege.html
+++ b/core/templates/messege.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-papoyb..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <div id="notification-container" class="fixed top-4 right-4 z-50 space-y-2 w-80">
   <!-- This div should be empty - notifications will be added dynamically -->
 </div>
