--- a/transactions/templates/loan_request.html
+++ b/transactions/templates/loan_request.html
@@ -16,6 +16,10 @@
             <input type="number" name="amount" id="amount" class="w-full border border-gray-300 p-3 rounded-md" placeholder="Enter the amount you want to borrow" required>
         </div>
 
+        {% for error in form.non_field_errors %}
+      <p class="text-red-600">{{ error }}</p>
+    {% endfor %}
+
         <!-- Submit Button -->
         <button type="submit" class="w-full bg-blue-600 text-white py-3 rounded-md hover:bg-blue-500 transition duration-200">
             Request Loan
